// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import type form the same package with native protobuf generates nexus DSLs: edgecases/import_from_same_pkg/child_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_from_same_pkg/child.proto

/* eslint-disable */

import { inputObjectType, nonNull, objectType } from "nexus";
import { ChildMessage as ChildMessage1 } from "./testapis/edgecases/import_from_same_pkg/child_pb";

export type testapis$edgecases$import_from_same_pkg$ChildMessage =
  ChildMessage1;
export const ChildMessage = objectType({
  name: "ChildMessage",
  definition: (t) => {
    t.field("body", {
      type: nonNull("String"),
      resolve: (source) => {
        const value = source.getBody();
        return value;
      },
      extensions: { protobufField: { name: "body", typeFullName: "string" } },
    });
  },
  isTypeOf: (data: unknown) => {
    return data instanceof ChildMessage1;
  },
  sourceType: {
    module: __filename,
    export: "testapis$edgecases$import_from_same_pkg$ChildMessage",
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.edgecases.import_from_same_pkg.ChildMessage",
      name: "ChildMessage",
      package: "testapis.edgecases.import_from_same_pkg",
    },
  },
});

export const ChildMessageInput = Object.assign(
  inputObjectType({
    name: "ChildMessageInput",
    definition: (t) => {
      t.field("body", {
        type: nonNull("String"),
        extensions: { protobufField: { name: "body", typeFullName: "string" } },
      });
    },
    extensions: {
      protobufMessage: {
        fullName: "testapis.edgecases.import_from_same_pkg.ChildMessage",
        name: "ChildMessage",
        package: "testapis.edgecases.import_from_same_pkg",
      },
    },
  }),
  {
    toProto: (
      input: NexusGen["inputTypes"]["ChildMessageInput"],
    ): ChildMessage1 => {
      const output = new ChildMessage1();
      output.setBody(input.body);
      return output;
    },
    _protoNexus: {
      fields: {
        body: {
          type: nonNull("String"),
          extensions: {
            protobufField: { name: "body", typeFullName: "string" },
          },
        },
      },
    },
  },
);
"
`;

exports[`import type form the same package with native protobuf generates nexus DSLs: edgecases/import_from_same_pkg/parent_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_from_same_pkg/parent.proto

/* eslint-disable */

import { inputObjectType, nullable, objectType } from "nexus";
import { ChildMessageInput } from "./child_pb_nexus";
import { ParentMessage as ParentMessage1 } from "./testapis/edgecases/import_from_same_pkg/parent_pb";

export type testapis$edgecases$import_from_same_pkg$ParentMessage =
  ParentMessage1;
export const ParentMessage = objectType({
  name: "ParentMessage",
  definition: (t) => {
    t.field("child", {
      type: nullable("ChildMessage"),
      resolve: (source) => {
        const value = source.getChild();
        if (value == null) {
          return null;
        }
        return value;
      },
      extensions: {
        protobufField: {
          name: "child",
          typeFullName: "testapis.edgecases.import_from_same_pkg.ChildMessage",
        },
      },
    });
  },
  isTypeOf: (data: unknown) => {
    return data instanceof ParentMessage1;
  },
  sourceType: {
    module: __filename,
    export: "testapis$edgecases$import_from_same_pkg$ParentMessage",
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.edgecases.import_from_same_pkg.ParentMessage",
      name: "ParentMessage",
      package: "testapis.edgecases.import_from_same_pkg",
    },
  },
});

export const ParentMessageInput = Object.assign(
  inputObjectType({
    name: "ParentMessageInput",
    definition: (t) => {
      t.field("child", {
        type: nullable("ChildMessageInput"),
        extensions: {
          protobufField: {
            name: "child",
            typeFullName:
              "testapis.edgecases.import_from_same_pkg.ChildMessage",
          },
        },
      });
    },
    extensions: {
      protobufMessage: {
        fullName: "testapis.edgecases.import_from_same_pkg.ParentMessage",
        name: "ParentMessage",
        package: "testapis.edgecases.import_from_same_pkg",
      },
    },
  }),
  {
    toProto: (
      input: NexusGen["inputTypes"]["ParentMessageInput"],
    ): ParentMessage1 => {
      const output = new ParentMessage1();
      if (input.child != null) {
        output.setChild(ChildMessageInput.toProto(input.child));
      }
      return output;
    },
    _protoNexus: {
      fields: {
        child: {
          type: nullable("ChildMessageInput"),
          extensions: {
            protobufField: {
              name: "child",
              typeFullName:
                "testapis.edgecases.import_from_same_pkg.ChildMessage",
            },
          },
        },
      },
    },
  },
);
"
`;

exports[`import type form the same package with protobufjs generates nexus DSLs: edgecases/import_from_same_pkg/child_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_from_same_pkg/child.proto

/* eslint-disable */

import { inputObjectType, nonNull, objectType } from "nexus";
import { testapis } from "./testapis/edgecases/import_from_same_pkg";

export type testapis$edgecases$import_from_same_pkg$ChildMessage =
  testapis.edgecases.import_from_same_pkg.ChildMessage;
export const ChildMessage = objectType({
  name: "ChildMessage",
  definition: (t) => {
    t.field("body", {
      type: nonNull("String"),
      resolve: (source) => {
        const value = source.body;
        if (value == null) {
          throw new Error("Cannot return null for non-nullable field");
        }
        return value;
      },
      extensions: { protobufField: { name: "body", typeFullName: "string" } },
    });
  },
  isTypeOf: (data: unknown) => {
    return data instanceof testapis.edgecases.import_from_same_pkg.ChildMessage;
  },
  sourceType: {
    module: __filename,
    export: "testapis$edgecases$import_from_same_pkg$ChildMessage",
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.edgecases.import_from_same_pkg.ChildMessage",
      name: "ChildMessage",
      package: "testapis.edgecases.import_from_same_pkg",
    },
  },
});

export const ChildMessageInput = Object.assign(
  inputObjectType({
    name: "ChildMessageInput",
    definition: (t) => {
      t.field("body", {
        type: nonNull("String"),
        extensions: { protobufField: { name: "body", typeFullName: "string" } },
      });
    },
    extensions: {
      protobufMessage: {
        fullName: "testapis.edgecases.import_from_same_pkg.ChildMessage",
        name: "ChildMessage",
        package: "testapis.edgecases.import_from_same_pkg",
      },
    },
  }),
  {
    toProto: (
      input: NexusGen["inputTypes"]["ChildMessageInput"],
    ): testapis.edgecases.import_from_same_pkg.ChildMessage => {
      const output = new testapis.edgecases.import_from_same_pkg.ChildMessage();
      output.body = input.body;
      return output;
    },
    _protoNexus: {
      fields: {
        body: {
          type: nonNull("String"),
          extensions: {
            protobufField: { name: "body", typeFullName: "string" },
          },
        },
      },
    },
  },
);
"
`;

exports[`import type form the same package with protobufjs generates nexus DSLs: edgecases/import_from_same_pkg/parent_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_from_same_pkg/parent.proto

/* eslint-disable */

import { inputObjectType, nullable, objectType } from "nexus";
import { ChildMessageInput } from "./child_pb_nexus";
import { testapis } from "./testapis/edgecases/import_from_same_pkg";

export type testapis$edgecases$import_from_same_pkg$ParentMessage =
  testapis.edgecases.import_from_same_pkg.ParentMessage;
export const ParentMessage = objectType({
  name: "ParentMessage",
  definition: (t) => {
    t.field("child", {
      type: nullable("ChildMessage"),
      resolve: (source) => {
        const value = source.child;
        if (value == null) {
          return null;
        }
        return value;
      },
      extensions: {
        protobufField: {
          name: "child",
          typeFullName: "testapis.edgecases.import_from_same_pkg.ChildMessage",
        },
      },
    });
  },
  isTypeOf: (data: unknown) => {
    return data instanceof
      testapis.edgecases.import_from_same_pkg.ParentMessage;
  },
  sourceType: {
    module: __filename,
    export: "testapis$edgecases$import_from_same_pkg$ParentMessage",
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.edgecases.import_from_same_pkg.ParentMessage",
      name: "ParentMessage",
      package: "testapis.edgecases.import_from_same_pkg",
    },
  },
});

export const ParentMessageInput = Object.assign(
  inputObjectType({
    name: "ParentMessageInput",
    definition: (t) => {
      t.field("child", {
        type: nullable("ChildMessageInput"),
        extensions: {
          protobufField: {
            name: "child",
            typeFullName:
              "testapis.edgecases.import_from_same_pkg.ChildMessage",
          },
        },
      });
    },
    extensions: {
      protobufMessage: {
        fullName: "testapis.edgecases.import_from_same_pkg.ParentMessage",
        name: "ParentMessage",
        package: "testapis.edgecases.import_from_same_pkg",
      },
    },
  }),
  {
    toProto: (
      input: NexusGen["inputTypes"]["ParentMessageInput"],
    ): testapis.edgecases.import_from_same_pkg.ParentMessage => {
      const output = new testapis.edgecases.import_from_same_pkg
        .ParentMessage();
      if (input.child != null) {
        output.child = ChildMessageInput.toProto(input.child);
      }
      return output;
    },
    _protoNexus: {
      fields: {
        child: {
          type: nullable("ChildMessageInput"),
          extensions: {
            protobufField: {
              name: "child",
              typeFullName:
                "testapis.edgecases.import_from_same_pkg.ChildMessage",
            },
          },
        },
      },
    },
  },
);
"
`;
